render weapons to the own frame buffer

--- a/ant.vcxproj.filters
+++ b/ant.vcxproj.filters
@@ -243,6 +243,9 @@
     <ClCompile Include="src\components\point_light_component.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\components\weapon_render_component.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\actor.h">
@@ -501,6 +504,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\lights\light.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\components\weapon_render_component.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
