--- a/ant.vcxproj
+++ b/ant.vcxproj
@@ -136,6 +136,7 @@
     <ClCompile Include="src\components\portal_component.cpp" />
     <ClCompile Include="src\asset_managers\animation_manager.cpp" />
     <ClCompile Include="src\components\tiled_render_component.cpp" />
+    <ClCompile Include="src\components\weapon_render_component.cpp" />
     <ClCompile Include="src\particle_systems\blood_ps.cpp" />
     <ClCompile Include="src\particle_systems\fire_ps.cpp" />
     <ClCompile Include="src\particle_systems\particle_system.cpp" />
@@ -214,6 +215,7 @@
     <ClInclude Include="src\components\portal_component.h" />
     <ClInclude Include="src\asset_managers\animation_manager.h" />
     <ClInclude Include="src\components\tiled_render_component.h" />
+    <ClInclude Include="src\components\weapon_render_component.h" />
     <ClInclude Include="src\interfaces\ISignable.h" />
     <ClInclude Include="src\lights\light.h" />
     <ClInclude Include="src\particle_systems\blood_ps.h" />
