--- a/ant.vcxproj.filters
+++ b/ant.vcxproj.filters
@@ -246,6 +246,9 @@
     <ClCompile Include="src\components\weapon_render_component.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\components\button_render_component.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\actor.h">
@@ -507,6 +510,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\components\weapon_render_component.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\components\button_render_component.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
