--- a/ant.vcxproj
+++ b/ant.vcxproj
@@ -137,6 +137,11 @@
     <ClCompile Include="src\asset_managers\animation_manager.cpp" />
     <ClCompile Include="src\components\tiled_render_component.cpp" />
     <ClCompile Include="src\components\weapon_render_component.cpp" />
+    <ClCompile Include="src\enemy\enemy_attack_state.cpp" />
+    <ClCompile Include="src\enemy\enemy_dead_state.cpp" />
+    <ClCompile Include="src\enemy\enemy_hit_state.cpp" />
+    <ClCompile Include="src\enemy\enemy_idle_state.cpp" />
+    <ClCompile Include="src\enemy\enemy_walk_state.cpp" />
     <ClCompile Include="src\particle_systems\blood_ps.cpp" />
     <ClCompile Include="src\particle_systems\fire_ps.cpp" />
     <ClCompile Include="src\particle_systems\particle_system.cpp" />
@@ -219,6 +224,11 @@
     <ClInclude Include="src\asset_managers\animation_manager.h" />
     <ClInclude Include="src\components\tiled_render_component.h" />
     <ClInclude Include="src\components\weapon_render_component.h" />
+    <ClInclude Include="src\enemy\enemy_attack_state.h" />
+    <ClInclude Include="src\enemy\enemy_dead_state.h" />
+    <ClInclude Include="src\enemy\enemy_hit_state.h" />
+    <ClInclude Include="src\enemy\enemy_idle_state.h" />
+    <ClInclude Include="src\enemy\enemy_walk_state.h" />
     <ClInclude Include="src\interfaces\ISignable.h" />
     <ClInclude Include="src\lights\light.h" />
     <ClInclude Include="src\particle_systems\blood_ps.h" />
