Add Health pick ups

--- a/ant.vcxproj
+++ b/ant.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="src\components\button_render_component.cpp" />
     <ClCompile Include="src\components\effect_component.cpp" />
     <ClCompile Include="src\components\fence_component.cpp" />
+    <ClCompile Include="src\components\heal_component.cpp" />
     <ClCompile Include="src\components\portal_component.cpp" />
     <ClCompile Include="src\asset_managers\animation_manager.cpp" />
     <ClCompile Include="src\components\tiled_render_component.cpp" />
@@ -220,6 +221,7 @@
     <ClInclude Include="src\components\button_render_component.h" />
     <ClInclude Include="src\components\effect_component.h" />
     <ClInclude Include="src\components\fence_component.h" />
+    <ClInclude Include="src\components\heal_component.h" />
     <ClInclude Include="src\components\portal_component.h" />
     <ClInclude Include="src\asset_managers\animation_manager.h" />
     <ClInclude Include="src\components\tiled_render_component.h" />
@@ -316,6 +318,7 @@
     <Xml Include="data\xml\fence.xml" />
     <Xml Include="data\xml\ammo.xml" />
     <Xml Include="data\xml\enemy.xml" />
+    <Xml Include="data\xml\heal.xml" />
     <Xml Include="data\xml\house.xml" />
     <Xml Include="data\xml\level1.xml" />
     <Xml Include="data\xml\mona.xml" />
