--- a/ant.vcxproj.filters
+++ b/ant.vcxproj.filters
@@ -273,6 +273,9 @@
     <ClCompile Include="src\components\heal_component.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\audio_manager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\actor.h">
@@ -561,6 +564,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\components\heal_component.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\audio_manager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
