--- a/ant.vcxproj.filters
+++ b/ant.vcxproj.filters
@@ -592,5 +592,6 @@
     <None Include="src\actor_manager.tpp" />
     <None Include="src\component_list.tpp" />
     <None Include="src\ui_button.tpp" />
+    <None Include="README.md" />
   </ItemGroup>
 </Project>
